# reasons

./: .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  Makefile  configure.ac  meson.build  reasons.pc.in
include/: reasons.h
include/reasons/: ast.h  debugger.h  eval.h  explain.h  lexer.h  parser.h  repl.h  runtime.h  trace.h  tree.h  types.h  viz.h
include/utils/: error.h  logger.h  memory.h
src/cli/: compile.c  debug.c  main.c  run.c  test.c
src/core/: ast.c  eval.c  explain.c  lexer.c  memory.c  parser.c  runtime.c  trace.c  tree.c
src/debug/: breakpoints.c  coverage.c  debugger.c  history.c  profiler.c  watch.c
src/io/: config.c  csv_io.c  fileio.c  json_io.c
src/repl/: commands.c  completion.c  history.c  prompt.c  repl.c
src/stdlib/: datetime.c  math.c  stats.c  string.c  validation.c
src/utils/: error.c  hash.c  logger.c  string_utils.c  vector.c
src/viz/: ascii_art.c  graph.c  tree_viz.c
